# JoyLink

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  README_CN.md  pyproject.toml
client/: CMakeLists.txt
client/examples/: zmq_subscriber.cpp
client/include/joystick_client/: joystick_client.h
client/python/: example_client.py  joylink_client.py  joystick_client.py
client/src/: joystick_client.cpp
common/: CMakeLists.txt
common/src/: config_parser.cpp  joystick_mapper.cpp
config/: cyclonedds.xml  dds_pub.yaml  default.yaml  gamesir.yaml  loco_ctrl.yaml  ps4.yaml  xbox.yaml  zmq_pub.yaml
idl/: JoystickData.idl
include/joystick_common/: config_parser.h  joystick_mapper.h  types.h
include/joystick_server/: config_parser.h  ipublisher.h  joystick_device.h  types.h
server/: CMakeLists.txt
server/include/joystick_server/: dds_publisher.h  ipublisher.h  joystick_device.h  ros2_publisher.h  zmq_publisher.h
server/src/: dds_publisher.cpp  ipublisher.cpp  joystick_device.cpp  main.cpp  ros2_publisher.cpp  zmq_publisher.cpp
src/: config_parser.cpp  ipublisher.cpp  main.cpp  ros2_publisher.cpp  zmq_publisher.cpp
test/: zmq_client.py
